Updated  44 valiation